<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/news_title"
                android:padding="8dp"
                android:textSize="22sp"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:fontFamily="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/news_description"
                android:padding="8dp"
                android:paddingLeft="10dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/description"
                android:fontFamily="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp" />

            <TextView
                android:id="@+id/news_sourceUrl"
                android:padding="8dp"
                android:textSize="14sp"
                android:autoLink="web"
                android:text="@string/full_article"
                android:clickable="true"
                android:textColor="@android:color/black"
                android:fontFamily="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_centerHorizontal="true"
                    android:id="@+id/news_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/news_source"
                android:padding="5dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/source"
                android:fontFamily="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/news_writer"
                android:padding="5dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/source"
                android:fontFamily="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/news_publisher"
                android:padding="8dp"
                android:textSize="16sp"
                android:text="@string/publish_at"
                android:textColor="@android:color/black"
                android:fontFamily="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>